# coe-schedule-extractor

./: README.md  extract_schedule.py  extraction_prompt.md  load_schedule.py  pyproject.toml
data/: .gitignore
